--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -8,6 +8,7 @@ If you wrote one, please add it to these tables.
 !  Author / Github
 !  Ver.
 !  Update
+!  Lang.
 !  Download
 !  Comment
 |-
@@ -15,6 +16,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/CharitooDunamis CharitooDunamis]
 | 1.00
 | 2/Sept<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/CharitooDunamis/kickass-plugin/master/kickass.py Download]
 | Python2 & Python3<br /> ✔ qb 3.4.x
 |-
@@ -22,6 +24,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires]
 | 1.00
 | 12/Apr<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py Download]
 | Python2 & Python3<br /> ✔ qb 3.3.15
 |-
@@ -29,6 +32,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/ngosang/qBittorrent-plugins ngosang]
 | 1.00
 | 17/Oct<br />2015
+| [[https://github.com/Pireo/hello-world/blob/master/it-IT.gif]]
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.py Download]
 | Python2 & Python3<br /> ✔ qb 3.3.15
 |-
@@ -36,6 +40,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/ngosang/qBittorrent-plugins ngosang]
 | 1.30
 | 25/Sep<br />2015
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.py Download]
 | Python2 & Python3<br /> ✔ qb 3.3.15
 |-
@@ -43,6 +48,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/b0nk/qbittorrent-search-plugins/ b0nk]
 | 1.13
 | 28/July<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.py Download]
 | Python2 & Python3<br /> ✔ qb 3.3.15
 |-
@@ -50,6 +56,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/davy39/qbfrench davy39]
 | 1.10
 | 19/Aug<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/fr.gif]]
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.py Download]
 | Python2 & Python3<br /> ✖ Not Working
 |-
@@ -57,6 +64,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/davy39/qbfrench davy39]
 | 1.10
 | 11/Aug<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/fr.gif]]
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.py Download]
 | Python2 & Python3<br /> ✖ Not Working
 |-
@@ -64,6 +72,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/Pireo/hello-world/ Pireo]
 | 1.20
 | 14/Jan<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/russia-flag.png]]
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/rutor.py Download]
 | Python3<br />✔ qb 3.3.15
 |-
@@ -71,6 +80,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 3.09
 | 22/July<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py Download]
 | Python2 & Python3<br /> ✖ Not Working
 |-
@@ -78,6 +88,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin ArionMiles]
 | 1.12
 | 04/Apr<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/ArionMiles/Zooqle-qBittorrent-Plugin/master/zooqle.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -85,6 +96,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/v1k45/1337x-qBittorrent-search-plugin v1k45]
 | 1.20
 | 19/Aug<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -92,6 +104,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 1.00
 | 21/Apr<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/btetree.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -99,6 +112,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 1.01
 | 23/Apr<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/psychocydd.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -106,6 +120,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 1.00
 | 23/Apr<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/it-IT.gif]]
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/ilcorsaronero.py Download]
 | Python2 & Python3<br /> ✖ Not Working
 |-
@@ -114,6 +129,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/Pireo/hello-world/ Pireo]
 | 1.20
 | 04/May<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/drap_es.png]]
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/divxtotal.py Download]
 | Python2 <br /> (?) Not Tested
 |-
@@ -121,6 +137,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/ kenken28]
 | 1.05
 | 24/Jun<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/kenken28/NyaaPantsu-qBittorrent-Plugin/master/nyaapantsu.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -128,6 +145,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
 | 1.11
 | 07/Aug<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/sukebei.py Download]
 | Python2 <br /> (?) Not Tested
 |-
@@ -135,6 +153,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
 | 1.11
 | 07/Aug<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.py Download]
 | Python2 & Python3<br />✔ qb 3.3.15
 |-
@@ -143,6 +162,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/ phuongtail<br />tranminh]
 | 1.01
 | 19/May<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/master/nyaa.py Download]
 | Python2 <br /> (?) Not Tested
 |-
@@ -151,6 +171,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires]
 | 1.00
 | 19/May<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py Download]
 | Python3 & Python2 <br />✔ qb 3.3.15
 |-
@@ -159,6 +180,7 @@ If you wrote one, please add it to these tables.
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires]
 | 1.20
 | 20/May<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.py Download]
 | Python3 & Python2 <br />✔ qb 3.3.15
 |-
@@ -181,6 +203,7 @@ Those sites require an account and your username/password need to be added into 
 | [https://github.com/davy39/qbfrench davy39]
 | 1.20
 | 11/Aug<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/fr.gif]]
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/t411.py Download] <br />
 [https://github.com/davy39/qbfrench/wiki README]
 | Python2 & Python3<br /> ✖ Not Working
@@ -189,6 +212,7 @@ Those sites require an account and your username/password need to be added into 
 | [https://github.com/Skymirrh/qBittorrent-rutracker-plugin Skymirrh]
 | 1.05
 | 12/Jul<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/russia-flag.png]]
 | [https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.py Download] <br />
 [ https://github.com/Skymirrh/qBittorrent-rutracker-plugin/blob/master/README.md README]
 | Python2 & Python3<br />✔ qb 3.3.15
@@ -197,6 +221,7 @@ Those sites require an account and your username/password need to be added into 
 | [https://github.com/alvin1979/qbrutracker alvin1979]
 | 1.00
 | 14/Sep<br />2016
+| [[https://github.com/Pireo/hello-world/blob/master/russia-flag.png]]
 | [https://github.com/alvin1979/qbrutracker Download]
 | Python3<br /> ✖ Not Working
 |-
@@ -204,6 +229,7 @@ Those sites require an account and your username/password need to be added into 
 | [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro adrianmocan]
 | 1.00
 | 10/Jun<br />2015
+| [[https://github.com/Pireo/hello-world/blob/master/ro.gif]]
 | [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.py Download] <br />
 [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.INSTALL_en.txt README]
 | Python2<br /> (?) Not Tested
@@ -212,6 +238,7 @@ Those sites require an account and your username/password need to be added into 
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires]
 | 1.30
 | 13/Apr<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://github.com/MadeOfMagicAndWires/qBit-plugin/blob/master/engines/bakabt.py Download] <br />
 [https://github.com/MadeOfMagicAndWires/qBit-plugins/blob/master/README.md README]
 | Python2 & Python3<br /> (?) Not Tested
